syntax = "proto3";

package sf.substreams.v1;
option go_package = "github.com/streamingfast/substreams/pb/sf/substreams/v1;pbsubstreams";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

service Stream {
  rpc Blocks(Request) returns (stream Response);
}

message Request {
  int64 start_block_num = 1;
  string start_cursor = 2;
  uint64 stop_block_num = 3;
  repeated ForkStep fork_steps = 4;
  string irreversibility_condition = 5;

  Manifest manifest = 6;
  repeated string output_modules = 7;
  repeated string initial_store_snapshot_for_modules = 8;
}

message Response {
  oneof message {
    ModulesProgress progress = 1; // Progress of data preparation, before sending in the stream of `data` events.
    InitialSnapshotData snapshot_data = 2;
    InitialSnapshotComplete snapshot_complete = 3;
    BlockScopedData data = 4;
  }
}

message InitialSnapshotComplete {
  string cursor = 1;
}

message InitialSnapshotData {
  string module_name = 1;
  StoreDeltas deltas = 2;
  uint64 sent_keys = 4;
  uint64 total_keys = 3;
}

message BlockScopedData {
  repeated ModuleOutput outputs = 1;
  Clock clock = 3;
  ForkStep step = 6;
  string cursor = 10;
}

message Clock {
  string id = 1;
  uint64 number = 2;
  google.timestamp.Timestamp timestamp = 3;
}

message ModuleOutput {
  string name = 1;
  // oneof ?
  google.protobuf.Any map_output = 2;
  StoreDeltas store_deltas = 3;
  repeated string logs = 4;
}

message ModulesProgress {
  repeated ModuleProgress modules = 1;
}

message ModuleProgress {
  string name = 1;
  repeated BlockRange processed_ranges = 2;

  uint64 total_bytes_read = 4;
  uint64 total_bytes_written = 4;

  bool failed = 3;
  string failure_reason = 5;
}

message BlockRange {
  uint64 start_block = 1;
  uint64 end_block = 2;
}

message StoreDeltas {
  repeated StoreDelta deltas = 1;
}

message StoreDelta {
  enum Operation {
    UNSET = 0;
    CREATE = 1;
    UPDATE = 2;
    DELETE = 3;
  }
  Operation operation = 1;
  uint64 ordinal = 2;
  string key = 3;
  bytes old_value = 4;
  bytes new_value = 5;
}

message DatabaseChanges {
  repeated TableChange tableChanges = 1;
}

//table.1
// create f.1 o.10 n.99
// update f.1 o.99 n.200
// update f.2 o.abc n.xyz
// update f.1 o.200 n.400

//table.1
// create f.1 o.10 n.400 f.2 o.abc n.xyz


//table.1
// update f.1 o.10 n.99
// update f.1 o.99 n.200
// update f.2 o.abc n.xyz
// update f.1 o.200 n.400

//table.1
// update f.1 o.10 n.400 f.2 o.abc n.xyz

message Output {
  uint64 block_num = 1;
  string block_id = 2;
  google.protobuf.Timestamp timestamp = 4;
  google.protobuf.Any value = 10;
}

message TableChange {
  string table = 1;
  string pk = 2;
  uint64 block_num = 3;
  uint64 ordinal = 4;
  enum Operation {
    CREATE = 0;
    UPDATE = 1;
    DELETE = 2;
  }
  Operation operation = 5;
  repeated Field fields = 6;
}

message Field {
  string name = 1;
  string new_value = 2;
  string old_value = 3;
}
